<resources>
    <string name="app_name">QuizDay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Знание на ладони</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="newButton">NewButton</string>
    <string name="action_settings">Настройки</string>
    <string name="action_help">Справка</string>

    <string name="menu_home">Home</string>
    <string name="menu_textquiz">TextQuiz</string>
    <string name="menu_imagequiz">ImageQuiz</string>

    <string name="text_quiz">Текстовые вопросы</string>
    <string name="image_quiz">Вопросы в картинках</string>
    <string name="settings">Настройки</string>
    <string name="help">Справка</string>
    <string name="addition">Дополнительно</string>
    <string name="share">Поделиться</string>
    <string name="send">Оценить</string>
    <string name="sound">Звук</string>
    <string name="is_sound">Включение/выключение звука</string>
    <string name="cbSortOn">Звук включен</string>
    <string name="cbSortOff">Звук выключен</string>
    <string name="name">Название</string>
    <string name="textQuizMain">Текстовая викторина</string>
    <string name="imageQuizMain">Викторина в картинках</string>

    <string name="dialog_title_device_is_offline">Нет соединения с Интернетом</string>
    <string name="dialog_message_device_is_offline">Вы не сможете эффективно использовать приложение
        без подключения к Интернету. Пожалуйста, проверьте интернет-соединение</string>
    <string name="dialog_message_load_impossible">Для первоначальной загрузки данных требуется Интернет.
        Пожалуйста, проверьте интернет-соединение</string>
    <string name="dialog_title_stub">Неизвестная ошибка</string>
    <string name="dialog_button_cancel">Понятно</string>
    <string name="flags_of_states">Флаги стран мира</string>
    <string name="capitals">Столицы государств</string>
    <string name="anything">Что-то ещё</string>
    <string name="state_fake">Страна</string>
    <string name="dogs">Породы собак</string>
    <string name="flags">Флаги</string>

    <string name="question">Вопрос %1$d из %2$d</string>
    <string name="image_description">Изображнние текущего флага викторины</string>
    <string name="guess_country">Угадайте страну</string>
    <string name="incorrect_answer">Неправильно!</string>
    <string name="number_of_choices">Количество вариантов ответов</string>
    <string name="number_of_flags">Количество вопросов в викторине</string>
    <string name="number_of_choices_description">Отображаются 2, 4 или 6 кнопок с вариантами ответов</string>
    <string name="number_of_flags_description">Нужно угадать 5, 10, 15 или 20 флагов</string>
    <string name="restarting_quiz">Викторина перезапустится с новыми настройками</string>
    <string name="restarting_new_block">Загружаем новый блок вопросов викторины</string>

    <string name="results">Вопросов: %1$d\nПопыток: %2$d\n%3$.01f%% правильных ответов</string>
    <string name="result">РЕЗУЛЬТАТЫ</string>
    <string name="results_questions">Вопросов: %1$d</string>
    <string name="results_attempts">Попыток: %1$d</string>
    <string name="results_performance">%1$.0f%% правильных ответов</string>
    <string name="reset_quiz">Новые вопросы</string>
    <string name="no_now">Не сегодня!</string>
    <string name="all">Все</string>
    <string name="Europa">Европа</string>
    <string name="Asia">Азия</string>
    <string name="America">Америка</string>
    <string name="Oceania">Океания</string>
    <string name="Africa">Африка</string>
    <string name="region">Регион</string>
    <string name="chooseRegion">Выберите регион</string>
    <string name="no_data_state">Нет данных \n Проверьте наличие Интернета</string>
    <string name="no_data_state_test">Пока нет данных</string>
    <string name="no_data_state_test_all">Вы пока не делали \n ошибок в викторине</string>
    <string name="no_data_state_test_region">В этом регионе \n пока ошибок нет</string>

    <string name="flag">Флаг</string>
    <string name="home_item">home_item</string>
    <string name="search">Поиск</string>
    <string name="search_country">Поиск</string>
    <string name="send_answer">Отправить</string>
    <string name="answer">Ответ:</string>
    <string name="states">Страны</string>
    <string name="resultDialog">ResultDialog</string>
    <string name="drawer_name">Quizday - знания на ладони</string>
    <string name="drawer_header_subtitle">Развлекательн-познавательная викторина</string>
    <string name="header">Заголовок</string>
    <string name="stateName">Название страны</string>


    <string name="menu">MAIN MENU</string>
    <string name="picture">picture</string>
    <string name="choose_menu">ВЫБИРАЙ!</string>
    <string name="choose_quiz">ИГРАЕМ</string>
    <string name="choose_play">ПОИГРАЕМ!</string>
    <string name="choose_play2">Поиграем!</string>
    <string name="divider">divider</string>
    <string name="MediumTextStub">Правильно</string>
    <string name="questionsStub">Мадагаскар</string>
    <string name="mistakes">Ошибки</string>
    <string name="regions">Регионы</string>
    <string name="newQuestions">Новые вопросы</string>
    <string name="performance">performance</string>
    <string name="attempts">attempts</string>
    <string name="questions">questions</string>
    <string name="quit_from_app">Для выхода нажмите НАЗАД ещё раз</string>
    <string name="any_image">"Изображение "</string>
    <string name="quest">Вопросы</string>
    <string name="answers">Ответы</string>
    <string name="incorrect">Неправильные ответы</string>
    <string name="incorrect_stub">Заменитель флага</string>
    <string name="incorrect_stub_description">Изображение-заменитель флага при неправильном ответе</string>
    <string name="helpString222">Quizday\n
        Развлекательно - познавательная викторина.\n\n
        Викторина включает как текстовые так и графические вопросы.\n\n
        В графической викторине вы можете проверить знание национальных флагов большинства стран мира.\n\n
        На вкладке "Флаги" вы можете угадать название страны по изображению флага,
        а на вкладке "Страны" - угадать изображение флага по названию страны.\n
        На вкладке "Ошибки" можно разобрать ошибки, допущенные в викторине.\n
        На вкладке "Регионы" представлены флаги стран для запоминания.\n\n
        Функция поиска, расположенная в верхней части экрана на вкладках "Ошибки" и "Регионы",
        позволяет найти интересующую вас страну всего по нескольким буквам из её названия\n\n
        Количество вопросов и количество вариантов ответов викторины можно установить через
        настройки приложения\n\n
    </string>

</resources>