<?xml version="1.0" encoding="utf-8"?>

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:entries="@array/guesses_list"
        android:entryValues="@array/guesses_list"
        android:key="pref_numberOfChoices"
        android:title="@string/number_of_choices"
        android:summary="@string/number_of_choices_description"
        android:persistent="true"
        android:defaultValue="4" />

    <PreferenceCategory
        android:title="@string/sound">

    <CheckBoxPreference
        android:key="cbSound"
        android:title="@string/is_sound"
        app:defaultValue="false"
        android:summaryOn="@string/cbSortOn"
        android:summaryOff="@string/cbSortOff">
    </CheckBoxPreference>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>