<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/textquizFragment"
            android:icon="@drawable/ic_baseline_text_fields_24"
            android:title="@string/text_quiz" />
        <item
            android:id="@+id/imagequizFragment"
            android:icon="@drawable/ic_baseline_photo_24"
            android:title="@string/image_quiz" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_red_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/help" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>