<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.bartex.quizday.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_helpFragment"
            app:destination="@id/helpFragment" />
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/textquizFragment"
        android:name="com.bartex.quizday.ui.textquiz.TextQuizFragment"
        android:label="@string/menu_textquiz"
        tools:layout="@layout/fragment_textquiz" >
        <action
            android:id="@+id/action_textquizFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_textquizFragment_to_helpFragment"
            app:destination="@id/helpFragment" />
    </fragment>

    <fragment
        android:id="@+id/imagequizFragment"
        android:name="com.bartex.quizday.ui.imagequiz.ImageQuizFragment"
        android:label="@string/menu_imagequiz"
        tools:layout="@layout/fragment_imagquiz" >
        <action
            android:id="@+id/action_imagequizFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_imagequizFragment_to_helpFragment"
            app:destination="@id/helpFragment" />
        <action
            android:id="@+id/action_imagequizFragment_to_flagsFragment"
            app:destination="@id/flagsFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.bartex.quizday.ui.setting.SettingsFragment"
        android:label="SettingsFragment" >
        <action
            android:id="@+id/action_settingsFragment_to_helpFragment"
            app:destination="@id/helpFragment"
            app:popUpTo="@id/settingsFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/helpFragment"
        android:name="com.bartex.quizday.ui.help.HelpFragment"
        android:label="HelpFragment" >
        <action
            android:id="@+id/action_helpFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:popUpTo="@id/helpFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/flagsFragment"
        android:name="com.bartex.quizday.ui.flags.FlagsFragment"
        android:label="FlagsFragment" >
        <action
            android:id="@+id/action_flagsFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_flagsFragment_to_helpFragment"
            app:destination="@id/helpFragment" />
        <action
            android:id="@+id/action_flagsFragment_to_resultDialog"
            app:destination="@id/resultDialog"
            app:popUpTo="@id/flagsFragment" />
    </fragment>
    <dialog
        android:id="@+id/resultDialog"
        android:name="com.bartex.quizday.ui.flags.ResultDialog"
        android:label="ResultDialog" >
        <action
            android:id="@+id/action_resultDialog_to_flagsFragment"
            app:destination="@id/flagsFragment" />
    </dialog>
</navigation>