<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorFone">

    <ProgressBar
        android:id="@+id/progressBarFlags"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        tools:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/quizLinearLayout"
        tools:context="com.bartex.quizday.ui.flags.FlagsFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_region_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:clipToPadding="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/question"
        android:id="@+id/questionNumberTextView"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/spacing"/>

    <!--так как layout_height="0dp" а layout_weight="1"-->
    <!--картинка изменяется в размерах при изменении  -->
    <!-- количества кнопок с ответами-->

        <ImageView
            android:id="@+id/flagImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/spacing"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_description"
            android:scaleType="fitCenter"
            tools:src="@tools:sample/avatars" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guess_country"
        android:id="@+id/guessCountryTextView"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row1LinearLayout">

        <Button
            android:id="@+id/button"
            style="@style/ButtonAnswerStyle"/>

        <Button
            android:id="@+id/button2"
            style="@style/ButtonAnswerStyle"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row2LinearLayout">

        <Button
            android:id="@+id/button3"
            style="@style/ButtonAnswerStyle"/>

        <Button
            android:id="@+id/button4"
            style="@style/ButtonAnswerStyle"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row3LinearLayout">

        <Button
            android:id="@+id/button5"
            style="@style/ButtonAnswerStyle"/>

        <Button
            android:id="@+id/button6"
            style="@style/ButtonAnswerStyle"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/answerTextView"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="@dimen/answer_size"
        android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>
